--- a/arch/arm/boot/dts/sun8i-v3s-licheepi-zero.dts
+++ b/arch/arm/boot/dts/sun8i-v3s-licheepi-zero.dts
@@ -50,6 +50,7 @@
 
 	aliases {
 		serial0 = &uart0;
+		serial2 = &uart2;
 		ethernet0 = &emac;
 	};
 
@@ -119,6 +120,12 @@
 
 &uart0 {
 	pinctrl-0 = <&uart0_pins_a>;
+	pinctrl-names = "default";
+	status = "okay";
+};
+
+&uart2 {
+	pinctrl-0 = <&uart2_pins_a>;
 	pinctrl-names = "default";
 	status = "okay";
 };
