--- a/arch/arm/boot/dts/sun8i-v3s.dtsi
+++ b/arch/arm/boot/dts/sun8i-v3s.dtsi
@@ -360,6 +360,11 @@
 				function = "uart0";
 			};
 
+			uart2_pins_a: uart2@0 {
+				pins = "PB0", "PB1";
+				function = "uart2";
+			};
+
 			lcd_rgb666_pins_a: lcd-rgb666-pe {
 				pins = "PE0", "PE1", "PE2", "PE3", "PE4", "PE5",
 				       "PE6", "PE7", "PE8", "PE9", "PE10", "PE11",
